--- a/10-nodejs-create-server/about.html
+++ b/10-nodejs-create-server/about.html
@@ -8,7 +8,7 @@
     <style>
       body {
         height: 100vh;
-        background-color: burlywood;
+        background-color: red;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -22,7 +22,7 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
       </nav>
-      <h1>home</h1>
+      <h1>About</h1>
     </div>
   </body>
 </html>
